--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "private": true,
   "scripts": {
     "fixpack": "npx fixpack"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
