--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "fixpack": "npx fixpack"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "rollup": "^1.31.0"
   }
 }
