--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "imagemin-cli": "^5.1.0",
+    "imagemin-pngquant": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
