--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-  "private": true,
-  "scripts": {
-    "fixpack": "npx fixpack"
-  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
@@ -18,5 +14,23 @@
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
     "rollup": "^1.31.0"
+  },
+  "private": true,
+  "scripts": {
+    "build": "run-s build:*",
+    "build:css": "cp ./src/*.css ./lib",
+    "build:html": "cp ./src/*.html ./lib",
+    "build:js": "rollup -c",
+    "build:json": "node -p 'JSON.stringify(require(`./src/manifest`), null, 2)' > ./lib/manifest.json",
+    "build:png": "imagemin --out-dir=./lib --plugin=pngquant ./src/*.png",
+    "fix": "eslint --cache --fix .",
+    "fixpack": "npx fixpack",
+    "lint": "eslint --cache .",
+    "watch": "run-p -l watch:*",
+    "watch:css": "onchange -v 'src/*.css' -- run-s build:css",
+    "watch:html": "onchange -v 'src/*.html' -- run-s build:html",
+    "watch:js": "onchange -v 'src/*.js' -- run-s build:js",
+    "watch:json": "onchange -v 'src/manifest.js' -- run-s build:json",
+    "watch:png": "onchange -v 'src/*.png' -- run-s build:png"
   }
 }
