--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
-    "rollup": "^1.31.0"
+    "rollup": "^1.31.0",
+    "stylelint": "^13.2.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2"
   },
   "private": true,
   "scripts": {
