--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "build:js": "rollup -c",
     "build:json": "node -p 'JSON.stringify(require(`./src/manifest`), null, 2)' > ./lib/manifest.json",
     "build:png": "imagemin --out-dir=./lib --plugin=pngquant ./src/*.png",
-    "fix": "eslint --cache --fix .",
+    "fix": "run-s fix:*",
+    "fix:css": "stylelint --cache --fix ./src/**/*.css",
+    "fix:js": "eslint --cache --fix .",
     "fixpack": "npx fixpack",
-    "lint": "eslint --cache .",
+    "lint": "run-s lint:*",
+    "lint:css": "stylelint --cache ./src/**/*.css",
+    "lint:js": "eslint --cache .",
     "watch": "run-p -l watch:*",
     "watch:css": "onchange -v 'src/*.css' -- run-s build:css",
     "watch:html": "onchange -v 'src/*.html' -- run-s build:html",
