update reovate config

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -3,7 +3,9 @@
     "config:base",
     ":automergeAll",
     ":label(renovate)",
+    ":preserveSemverRanges",
     ":assignee(sasaplus1)",
-    ":timezone(Asia/Tokyo)"
+    ":timezone(Asia/Tokyo)",
+    "group:linters"
   ]
 }
