--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "build:html": "cp ./src/*.html ./lib",
     "build:js": "rollup -c",
     "build:json": "node -p 'JSON.stringify(require(`./src/manifest`), null, 2)' > ./lib/manifest.json",
-    "build:png": "imagemin --out-dir=./lib --plugin=pngquant ./src/*.png",
-    "build:svg": "imagemin --out-dir=./lib --plugin=svgo ./src/*.svg",
+    "build:png": "imagemin ./src/*.png --out-dir=./lib --plugin=pngquant",
+    "build:svg": "imagemin ./src/*.svg --out-dir=./lib --plugin=svgo",
     "fix": "run-s fix:*",
     "fix:css": "stylelint --cache --fix ./src/**/*.css",
     "fix:js": "eslint --fix .",
