--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "build:svg": "imagemin ./src/*.svg --out-dir=./lib --plugin=svgo",
     "fix": "run-s fix:*",
     "fix:css": "stylelint --cache --fix ./src/**/*.css",
-    "fix:js": "eslint --fix .",
+    "fix:js": "run-s fix:js:eslint fix:js:prettier",
+    "fix:js:eslint": "eslint --fix .",
+    "fix:js:prettier": "prettier --ignore-path .eslintignore --write '**/*.js'",
     "fixpack": "npx fixpack",
     "lint": "run-s lint:*",
     "lint:css": "stylelint --cache ./src/**/*.css",
-    "lint:js": "eslint --cache .",
+    "lint:js": "run-s lint:js:eslint lint:js:prettier",
+    "lint:js:eslint": "eslint --cache .",
+    "lint:js:prettier": "prettier --check --ignore-path .eslintignore '**/*.js'",
     "release": "zip -j ./self-catering.zip ./lib/*",
     "watch": "run-p -l watch:*",
     "watch:css": "onchange -v 'src/*.css' -- run-s build:css",
