--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "build:png": "imagemin ./src/*.png --out-dir=./lib --plugin=pngquant",
     "build:svg": "imagemin ./src/*.svg --out-dir=./lib --plugin=svgo",
     "fix": "run-s fix:*",
-    "fix:css": "stylelint --cache --fix ./src/**/*.css",
+    "fix:css": "run-s fix:css:stylelint fix:css:prettier",
+    "fix:css:prettier": "prettier --ignore-path .stylelintignore --write '**/*.css'",
+    "fix:css:stylelint": "stylelint --cache --fix ./src/**/*.css",
     "fix:js": "run-s fix:js:eslint fix:js:prettier",
     "fix:js:eslint": "eslint --fix .",
     "fix:js:prettier": "prettier --ignore-path .eslintignore --write '**/*.js'",
     "fixpack": "npx fixpack",
     "lint": "run-s lint:*",
-    "lint:css": "stylelint --cache ./src/**/*.css",
+    "lint:css": "run-s lint:css:stylelint lint:css:prettier",
+    "lint:css:prettier": "prettier --check --ignore-path .stylelintignore '**/*.css'",
+    "lint:css:stylelint": "stylelint --cache ./src/**/*.css",
     "lint:js": "run-s lint:js:eslint lint:js:prettier",
     "lint:js:eslint": "eslint --cache .",
     "lint:js:prettier": "prettier --check --ignore-path .eslintignore '**/*.js'",
