--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0"
   },
+  "engines": {
+    "node": ">=11"
+  },
   "private": true,
   "scripts": {
     "build": "run-s build:*",
