update some configurations

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.1.0",
     "@types/chrome": "^0.0.127",
     "@types/firefox-webext-browser": "^82.0.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -34,17 +35,17 @@
     "build": "run-s build:*",
     "build:css": "cp ./src/*.css ./lib",
     "build:html": "cp ./src/*.html ./lib",
-    "build:js": "rollup -c",
     "build:json": "node -p 'JSON.stringify(require(`./src/manifest`), null, 2)' > ./lib/manifest.json",
     "build:png": "imagemin ./src/*.png --out-dir=./lib --plugin=pngquant",
     "build:svg": "imagemin ./src/*.svg --out-dir=./lib --plugin=svgo",
+    "build:ts": "rollup -c",
     "fix": "run-s fix:*",
     "fix:css": "run-s fix:css:stylelint fix:css:prettier",
     "fix:css:prettier": "prettier --ignore-path .stylelintignore --write '**/*.css'",
     "fix:css:stylelint": "stylelint --cache --fix ./src/**/*.css",
     "fix:js": "run-s fix:js:eslint fix:js:prettier",
-    "fix:js:eslint": "eslint --fix .",
-    "fix:js:prettier": "prettier --ignore-path .eslintignore --write '**/*.js'",
+    "fix:js:eslint": "eslint --ext .js,.ts, --fix .",
+    "fix:js:prettier": "prettier --ignore-path .eslintignore --write '**/*.{js,ts}'",
     "fixpack": "npx fixpack",
     "lint": "run-s lint:*",
     "lint:css": "run-s lint:css:stylelint lint:css:prettier",
@@ -52,14 +53,14 @@
     "lint:css:stylelint": "stylelint --cache ./src/**/*.css",
     "lint:js": "run-s lint:js:eslint lint:js:prettier",
     "lint:js:eslint": "eslint --cache .",
-    "lint:js:prettier": "prettier --check --ignore-path .eslintignore '**/*.js'",
+    "lint:js:prettier": "prettier --check --ignore-path .eslintignore '**/*.{js,ts}'",
     "release": "zip -j ./self-catering.zip ./lib/*",
     "watch": "run-p -l watch:*",
     "watch:css": "onchange -v 'src/*.css' -- run-s build:css",
     "watch:html": "onchange -v 'src/*.html' -- run-s build:html",
-    "watch:js": "onchange -v 'src/*.js' -- run-s build:js",
     "watch:json": "onchange -v 'src/manifest.js' -- run-s build:json",
     "watch:png": "onchange -v 'src/*.png' -- run-s build:png",
-    "watch:svg": "onchange -v 'src/*.svg' -- run-s build:svg"
+    "watch:svg": "onchange -v 'src/*.svg' -- run-s build:svg",
+    "watch:ts": "onchange -v 'src/*.ts' -- run-s build:ts"
   }
 }
