--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/chrome": "^0.0.127",
     "@types/firefox-webext-browser": "^82.0.0",
+    "@types/mustache": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.0.0",
