--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "mustache": "^4.0.0"
+    "mustache": "^4.0.0",
+    "webextension-polyfill-ts": "^0.22.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
