--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/chrome": "^0.0.127",
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/mustache": "^4.1.0",
+    "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.0.0",
@@ -41,6 +42,7 @@
     "build:png": "imagemin ./src/*.png --out-dir=./lib --plugin=pngquant",
     "build:svg": "imagemin ./src/*.svg --out-dir=./lib --plugin=svgo",
     "build:ts": "rollup -c",
+    "check-types": "tsc --noEmit",
     "fix": "run-s fix:*",
     "fix:css": "run-s fix:css:stylelint fix:css:prettier",
     "fix:css:prettier": "prettier --ignore-path .stylelintignore --write '**/*.css'",
