--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declaration": true,
+    "jsx": "react",
+    "jsxFactory": "h",
     "module": "ESNext",
     "moduleResolution": "Node",
     "newLine": "lf",
